# ml-playground

./: .gitignore  pyproject.toml  requirements.txt
notebooks/: credit_perceptron.ipynb  test_setup.ipynb
src/: utils.py
